# tfs-with-forge-system

./: README.md  config.lua  database.sql
data/: global.lua  stages.lua
data/XML/: events.xml  familiars.xml  groups.xml  imbuements.xml  mounts.xml  outfits.xml  stages.xml  vocations.xml
data/chatchannels/: chatchannels.xml
data/chatchannels/scripts/: help.lua  world_chat.lua
data/events/: events.xml
data/events/scripts/: creature.lua  monster.lua  party.lua  player.lua
data/items/: items.otb  items.xml
data/items/Otb1286/: items.otb
data/lib/: lib.lua
data/lib/core/: constants.lua  container.lua  core.lua  creature.lua  exeta_loot.lua  functions.lua  imbuements.lua  item.lua  itemtype.lua  party.lua  player.lua  storages.lua
data/lib/others/: ForgeSystemMonster.lua  TrainExercise.lua  others.lua
data/lib/quests/: their_masters_voice.lua
data/lib/tables/: commonCommands.lua  cube_teleport.lua  door.lua  drome_potions.lua  outfits.lua  preys.lua  table.lua  town.lua  tp_modal.lua
data/logs/: cleanhouses.txt
data/monster/aquatics/: quara_constrictor.lua  quara_constrictor_scout.lua  quara_mantassin_scout.lua  renegade_quara_constrictor.lua  renegade_quara_mantassin.lua  renegade_quara_pincher.lua  renegade_quara_predator.lua  shark.lua
data/monster/bosses/: custodian.lua  gaffir.lua  guard_captain_quaid.lua  kroazur.lua  matador.lua  morshabaal.lua  the_astral_source.lua  the_frog_prince.lua  zamuloshsummom.lua  zavarash.lua
data/monster/constructs/: rotten_golem.lua
data/monster/demons/: brachiodemon.lua  dawnfire_asura.lua  demon.lua  frost_flower_asura.lua  hellflayer.lua  hellhound.lua  infernal_demon.lua  many_faces.lua  midnight_asura.lua  true_dawnfire_asura.lua  true_frost_flower_asura.lua  true_midnight_asura.lua  vexclaw.lua
data/monster/dragons/: ghastly_dragon.lua  wyrm.lua
data/monster/elementals/: turbulent_elemental.lua
data/monster/extra_dimensional/: breach_brood.lua  courage_leech.lua  dread_intruder.lua  reality_reaver.lua  sparkion.lua  stabilizing_dread_intruder.lua
data/monster/humanoids/: crazed_summer_rearguard.lua  crazed_summer_vanguard.lua  crazed_winter_rearguard.lua  crazed_winter_vanguard.lua  insane_siren.lua  soul-broken_harbinger.lua
data/monster/humans/: enlightened_of_the_cult.lua  glooth_bandit.lua  hardened_usurper_archer.lua  hardened_usurper_warlock.lua  nomad.lua  nomad_female.lua
data/monster/lycanthropes/: Katex Blood Tongue.lua  Srezz Yellow Eyes.lua  Utua Stone Sting.lua  Yirkas Blue Scales.lua  werefox.lua  werehyaena.lua  werehyaena_shaman.lua  werelion.lua  werelioness.lua
data/monster/magicals/: bog_raider.lua  frazzlemaw.lua  guzzlemaw.lua  lumbering_carnivor.lua  menacing_carnivor.lua  silencer.lua  spiky_carnivor.lua
data/monster/mammals/: gloom_wolf.lua  mutated_tiger.lua  rat.lua
data/monster/new_update/: Carnisylvan_Sapling.lua  Cave_Chimera.lua  Dark_Carnisylvan.lua  Eyeless_Devourer.lua  Girtablilu_Warrior.lua  Hulking_Carnisylvan.lua  Juvenile_Bashmu.lua  Lavafungus.lua  Lavaworm.lua  Poisonous_Carnisylvan.lua  Streaked_Devourer.lua  Tremendous_Tyrant.lua  Varnished_Diremaw.lua  Venerable_Girtablilu.lua  afflicted_strider.lua  bashmu.lua  blemished_spawn.lua
data/monster/plants/: branchy_crawler.lua  cloak_of_terror.lua
data/monster/raids/: ferumbras.lua  fleabringer.lua  glooth_fairy.lua  orc_sambackpack.lua  orshabaal.lua
data/monster/reptiles/: adult_goanna.lua  lizard_sentinel.lua  sea_serpent.lua  serpent_spawn.lua  thornback_tortoise.lua  young_goanna.lua  young_sea_serpent.lua
data/monster/summons/: druid_familiar.lua  knight_familiar.lua  paladin_familiar.lua  sorcerer_familiar.lua
data/monster/undeads/: bony_sea_devil.lua  capricious_phantom.lua  distorted_phantom.lua  druid's_apparition.lua  falcon_knight.lua  falcon_paladin.lua  gazer_spectre.lua  hazardous_phantom.lua  infernal_phantom.lua  knight's_apparition.lua  mould_phantom.lua  paladin's_apparition.lua  ripper_spectre.lua  sorcerer's_apparition.lua  undead_dragon.lua  vibrant_phantom.lua
data/monster/vermins/: kollos.lua  spidris.lua
data/npc/: CompraTudo.xml  Outfits.xml  chephan.xml  eremo.xml  gorn.xml  heavenly_messenger.xml  imalas.xml  imbuement_seller.xml  jackye_addoner.xml  mex_ballons.xml  mex_seller_rings_neacles.xml  ocomerciante.xml  odemara.xml  perod.xml  runtel_blackspark.xml  the_librarian.xml  the_renegade_of_umera.xml  the_thaian.xml  todd.xml  undal.xml  vanys.xml  vendeItemAddon.xml  yasir.xml  zeyrot.xml
data/npc/scripts/: black_bert.lua  captain_dreadnought.lua  charos.lua  cledwyn.lua  dreamCourtsAddons.lua  harlow.lua  heavenly_messenger.lua  imbuement_seller.lua  imbul.lua  jackye_addoner.lua  mexring.lua  oressa.lua  quentin.lua  testserver_assistant.lua  the_renegade_of_umera.lua  the_thaian.lua
data/raids/: raids.xml
data/raids/venore/: orc_backpack.xml
data/scripts/: Salida.lua  SalidaYselda.lua  The_Mega_Magmaoid_quest.lua  banuraccess.lua  entrada.lua
data/scripts/actions/: bosseye.lua  cube_teleport.lua  forge_open.lua  fullstaminarefill.lua  gloothomotive_mount.lua  teleport_scroll.lua
data/scripts/creaturescripts/: firstitems.lua  newOnlineBonus.lua
data/scripts/custom/: discord_webhook.lua  monster_training_machine.lua
data/scripts/globalevents/: autosave-interval.lua  msganimada.lua  serverTestHealing.lua  vipChecker.lua
data/scripts/lib/: register_monster_type.lua
data/scripts/modules/: bestiary_charms.lua
data/spells/: spells.xml
forge/: forge_system.lua
src/: CMakeLists.txt  account.cpp  account.hpp  actions.h  ban.cpp  bed.h  chat.h  combat.cpp  combat.h  condition.cpp  condition.h  configmanager.cpp  configmanager.h  connection.cpp  connection.h  const.h  container.cpp  container.h  creature.cpp  creature.h  creaturecallback.cpp  creaturecallback.h  creatureevent.h  cylinder.cpp  cylinder.h  database.cpp  database.h  databasemanager.cpp  databasemanager.h  databasetasks.h  decay.cpp  decay.h  definitions.h  depotchest.h  depotlocker.h  desktop.ini  events.cpp  events.h  fileloader.h  gamestore.h  (+77 more)
(+316 files in other folders)
